--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -6,19 +6,19 @@ on:
   workflow_dispatch:
   push:
     branches: [ main ]
- 
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: Platane/snk@v2
+      - uses: Platane/snk/svg-only@v3
         with:
           github_user_name: gianlucabinetti
           outputs: |
             dist/github-snake.svg
             dist/github-snake-dark.svg
       
-      - uses: crazy-max/ghaction-github-pages@v2.6.0
+      - uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
           build_dir: dist
