--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -10,17 +10,20 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
+      - uses: actions/checkout@v3
+      
       - uses: Platane/snk/svg-only@v3
         with:
           github_user_name: gianlucabinetti
           outputs: |
-            dist/github-snake.svg
-            dist/github-snake-dark.svg
+            github-snake.svg
+            github-snake-dark.svg
       
-      - uses: crazy-max/ghaction-github-pages@v3.1.0
+      - uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          target_branch: output
-          build_dir: dist
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          commit_message: 'Generate snake animation'
+          branch: main
+          file_pattern: '*.svg'
